--- a/src/pages/Map/style.css
+++ b/src/pages/Map/style.css
@@ -25,12 +25,19 @@
 .sticky {
   position: -webkit-sticky;
   position: sticky;
-  height: 95vh;
+  height: 90vh;
   width: 100%;
-  top: 5vh;
+  top: 10vh;
 }
 
 .map-page {
   /* margin-top: 5vh; */
   background-color: #f8f7fa;
+}
+
+.routes {
+  width: 50%;
+  height: 5vh;
+  display: flex; 
+  align-items: center;
 }
