--- a/src/pages/Map/style.css
+++ b/src/pages/Map/style.css
@@ -11,7 +11,7 @@
   height: 5vh;
   /* min-width: 520px; */
   display: flex;
-  box-shadow: 0 2px 2px -2px rgba(0,0,0,.2);
+  box-shadow: 0 2px 2px -2px rgba(0, 0, 0, 0.2);
   border-bottom: 1px solid #d8dbdd;
 }
 
@@ -38,7 +38,7 @@
 .routes {
   width: 50%;
   height: 5vh;
-  display: flex; 
+  display: flex;
   align-items: center;
 }
 
@@ -83,14 +83,14 @@
 }
 
 .route {
-  width: 10vw; 
-  text-align: right; 
+  width: 10vw;
+  text-align: right;
   /* border-bottom: 1px solid #000;  */
   line-height: 0.1em;
-  margin: 10px 0; 
-} 
+  margin: 10px 0;
+}
 
-.route span { 
-   background:#fff; 
-   padding:0 10px; 
+.route span {
+  background: #fff;
+  padding: 0 10px;
 }
