--- a/src/pages/Map/style.css
+++ b/src/pages/Map/style.css
@@ -15,6 +15,22 @@
   border-bottom: 1px solid #d8dbdd;
 }
 
+.header #selections {
+  display: none;
+  position: absolute;
+  top: 5.0375vh;
+  right: 0.0375vw;
+  background-color: #f9f9f9;
+  min-width: 240px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.header #selections button {
+  display: block;
+  text-align: left;
+}
+
 .marker-popup {
   width: 250px;
 }
