--- a/src/pages/Map/style.css
+++ b/src/pages/Map/style.css
@@ -18,9 +18,10 @@
 .header #selections {
   display: none;
   position: absolute;
-  top: 5.0375vh;
-  right: 0.0375vw;
-  background-color: #f9f9f9;
+  top: 5vh;
+  right: 0;
+  border-radius: 0 0 8px 8px;
+  background-color: white;
   min-width: 240px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
