--- a/src/pages/Map/style.css
+++ b/src/pages/Map/style.css
@@ -13,6 +13,7 @@
   display: flex;
   box-shadow: 0 2px 2px -2px rgba(0, 0, 0, 0.2);
   border-bottom: 1px solid #d8dbdd;
+  z-index: 1;
 }
 
 .header #selections {
@@ -53,7 +54,7 @@
 }
 
 .routes {
-  width: 50%;
+  width: 100%;
   height: 5vh;
   display: flex;
   align-items: center;
