--- a/src/pages/Map/style.css
+++ b/src/pages/Map/style.css
@@ -169,6 +169,13 @@ table.is-view td.is-today-end {
 }
 
 /* Button classes */
+.button.is-super-small {
+  max-height: 21px; 
+  font-size: 0.7rem;
+  padding-left: 0.85em !important;
+  padding-right: 0.85em !important;
+}
+
 .button.is-square {
   border-radius: 0;
   transform: skew(-10deg);
