making code more readable & small visual changes

--- a/src/pages/Map/style.css
+++ b/src/pages/Map/style.css
@@ -152,13 +152,17 @@
   border-top-right-radius: 6px;
 }
 
+.list-item-head button, .list-item-head span {
+  vertical-align: middle;
+}
+
 /* Route color display classes */
 .route {
   /* width: 10vw; */
   text-align: right;
   /* border-bottom: 1px solid #000;  */
   line-height: 0.1em;
-  margin: 10px 0;
+  margin: 3% 0;
 }
 
 .route span {
@@ -204,10 +208,10 @@ table.is-view td.is-today-end {
 
 /* Button classes */
 .button.is-super-small {
-  max-height: 21px; 
-  font-size: 0.7rem;
-  padding-left: 0.85em !important;
-  padding-right: 0.85em !important;
+  max-height: 18px; 
+  font-size: 0.65rem;
+  padding-left: 0.65em !important;
+  padding-right: 0.65em !important;
 }
 
 .button.is-sharp {
