updating visuals (WIP)

--- a/src/pages/Map/style.css
+++ b/src/pages/Map/style.css
@@ -140,6 +140,11 @@
   /* width: 120%; */
 }
 
+
+table.list-item td,
+table.list-item th,
+table.list-item button,
+table.list-item span,
 .list-item table td, 
 .list-item table th, 
 .list-item table button, 
