--- a/src/pages/Map/style.css
+++ b/src/pages/Map/style.css
@@ -140,7 +140,6 @@
   /* width: 120%; */
 }
 
-/* Call a single table something else instead of list-item, vcenter? */
 table.vcenter-items td,
 table.vcenter-items th,
 table.vcenter-items button,
@@ -182,6 +181,13 @@ table.list-item .is-pulled-right,
 
 .list-item table tbody.is-bordered tr td:last-child {
   border-right-width: 0;
+}
+
+/* Independent table classes */
+table tr.filler-row th,
+table tr.filler-row td {
+  padding: 0 0 1px 0;
+  border-left-style: hidden;
 }
 
 /* Route color display classes */
