--- a/src/pages/Admin/style.css
+++ b/src/pages/Admin/style.css
@@ -272,6 +272,17 @@ table.is-view td.is-today-end {
   background-color: #ededed;
 }
 
+/* Disable highlight text classes */
+.no-select {
+  -webkit-touch-callout: none;  /* iOS Safari */
+  -webkit-user-select: none;    /* Safari */
+  -khtml-user-select: none;     /* Konqueror HTML */
+  -moz-user-select: none;       /* Old versions of Firefox */
+  -ms-user-select: none;        /* Internet Explorer/Edge */
+  user-select: none;            /* Non-prefixed version, currently
+                                   supported by Chrome, Edge, Opera and Firefox */
+}
+
 /* Loading screen classes */
 .loading-screen {
   margin: calc(50vh - 8vw) auto;
