additions to business/driver insetions/edits & requesting constraint data from server

--- a/src/pages/Admin/style.css
+++ b/src/pages/Admin/style.css
@@ -237,12 +237,14 @@ table.is-view td.is-today-end {
 
 /* Level classes */
 .level .level-left.is-split,
-.level .level-right.is-split {
+.level .level-right.is-split,
+.level .level-item.is-split {
   width: 50%;
   display: inline-block;
 }
 
-.level .level-left.is-split {
+.level .level-left.is-split,
+.level .level-item.is-split.left {
   border-right: 1px solid lightgrey;
 }
 
